--- a/web/views/streams.html
+++ b/web/views/streams.html
@@ -1,12 +1,21 @@
-<% for ( s in LLconf.globals.streams ) { %>
-	<li class="" stream="<%= s %>">
-		<a class="" href="/streams/<%= s %>"><%= s %></a>
-		<ul class="">
-			<% for ( sm in LLweb.submenu[s] ) { %>
-				<li class="" substream="<%= LLweb.submenu[s][sm] %>">
-					<a class="" href="/streams/<%= s %>/<%= LLweb.submenu[s][sm] %>"><%= LLweb.submenu[s][sm] %></a>
-				</li>
-			<% } %>
+<% for ( s in LLconf.globals.streams ) { 
+	if ( !LLconf.globals.streams[s].enabled )
+		continue;
+%>
+
+	<li class="l_submenu" submenu="<%= s %>">
+		<a class="a_submenu" href="/streams/<%= s %>"><%= s %></a>
+	
+		<ul class="u_substream">
+		
+		<% for ( sm in LLweb.submenu[s] ) { %>
+			<li class="l_substream" substream="<%= LLweb.submenu[s][sm] %>">
+				<a class="a_submenu_stream" href="/streams/<%= s %>/<%= LLweb.submenu[s][sm] %>"><%= LLweb.submenu[s][sm] %></a>
+			</li>
+		<% } %>
+			
 		</ul>
+		
 	</li>
+	
 <% } %>
