aggiunto vero salvataggio delle configurazioni + restart di tutta l'applicazione

--- a/web/views/layout.html
+++ b/web/views/layout.html
@@ -65,7 +65,7 @@
 				</ul>
 
 				<div id="desc_left">
-					nodeLogLizer v.<%= LLconf.version %>
+					nodeLogLizer v.<%= LLversion %>
 				</div>	
 			</div>
 			<div id="right_wrapper">
