--- a/web/views/layout.html
+++ b/web/views/layout.html
@@ -1,6 +1,8 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html>
 	<head>
 		<title>LL : nodeLogLizer</title>
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<link type="text/css" rel="stylesheet" href="/css/layout.css"></link>
 		
 		<script type="text/javascript" src="/js/jquery-1.7.1.min.js"></script>
@@ -18,8 +20,8 @@
 	<body>
 		<div id="wrapper">
 			<div id="left_wrapper">
+				<div id="welc_msg">Welcome "<b><%= user %></b>"<a class="a_menu" href="/logout">Logout</a></div>
 				<div id="logo"></div>
-				
 				<ul class="u_menu">
 					
 					<li class="l_menu" menu="home">
