--- a/web/views/layout.html
+++ b/web/views/layout.html
@@ -31,6 +31,12 @@
 					
 					<li class="l_menu" menu="settings">
 						<a class="a_menu" href="/settings">Settings</a>
+						
+						<ul class="u_submenu">
+							<li class="l_submenu" submenu="users">
+								<a class="a_submenu" href="/settings/users">Users</a>
+							</li>
+						</ul>
 					</li>
 					
 					<li class="l_menu" menu="streams">
